--- a/src/locales/ko/htp.json
+++ b/src/locales/ko/htp.json
@@ -54,6 +54,7 @@
         "examples": "예시",
         "main-bet": {
             "title": "주요 베팅",
+            "heading": "주요 베팅",
             "examples": "예시",
             "description": "설명",
             "table": {
@@ -73,6 +74,7 @@
         },
         "side-bet": {
             "title": "사이드 베팅",
+            "heading": "사이드 베팅",
             "examples": "예시",
             "description": "설명",
             "table": {
