update how to play dt

--- a/src/locales/en/htp.json
+++ b/src/locales/en/htp.json
@@ -103,6 +103,6 @@
     },
     "payout": {
         "title": "Payout",
-        "content": "Corresponds to what is in the Payments and Limits menu"
+        "bet-payout": "bet payout"
     }
 }
