--- a/src/locales/ko/htp.json
+++ b/src/locales/ko/htp.json
@@ -103,6 +103,6 @@
     },
     "payout": {
         "title": "지급",
-        "content": "보상은 보상 테이블과 한도 메뉴에 따라 다릅니다."
+        "bet-payout": "베팅 지불금"
     }
 }
