--- a/src/locales/th/htp.json
+++ b/src/locales/th/htp.json
@@ -103,6 +103,6 @@
     },
     "payout": {
         "title": "การจ่ายเงิน",
-        "content": "ตามที่แสดงในเมนูตารางจ่ายเงินและข้อกำหนด"
+        "bet-payout": "การจ่ายเงินเดิมพัน"
     }
 }
