--- a/src/locales/id/htp.json
+++ b/src/locales/id/htp.json
@@ -53,6 +53,7 @@
         "title": "Deskripsi Taruhan dan Contoh",
         "description": "Deskripsi",
         "examples": "Contoh",
+        "anything": "APAPUN",
         "main-bet": {
             "title": "TARUHAN UTAMA",
             "heading": "TARUHAN UTAMA",
