--- a/src/locales/th/htp.json
+++ b/src/locales/th/htp.json
@@ -52,6 +52,7 @@
         "title": "คำอธิบายการเดิมพันและตัวอย่าง",
         "description": "คำอธิบาย",
         "examples": "ตัวอย่าง",
+        "anything": "อะไรก็ได้",
         "main-bet": {
             "title": "เดิมพันหลัก",
             "heading": "เดิมพันหลัก",
