--- a/src/locales/vn/htp.json
+++ b/src/locales/vn/htp.json
@@ -52,6 +52,7 @@
         "title": "Mô tả cược và ví dụ",
         "description": "Mô tả",
         "examples": "Ví dụ",
+        "anything": "Bất cứ điều gì",
         "main-bet": {
             "title": "CÁC CƯỢC CHÍNH",
             "heading": "CÁC CƯỢC CHÍNH",
